--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -260,3 +260,24 @@ important {
     color:#444;
   }
 }
+
+
+.heatMap {
+  width: 70%;
+  text-align: center;
+}
+.heatMap th {
+background: grey;
+word-wrap: break-word;
+text-align: center;
+}
+.heatMap tr:nth-child(1) { background: firebrick; }
+.heatMap tr:nth-child(4) { background: cadetblue; }
+.heatMap tr:nth-child(5) { background: firebrick; }
+.heatMap tr:nth-child(9) { background: cadetblue; }
+.heatMap tr:nth-child(10) { background: firebrick; }
+.heatMap tr:nth-child(15) { background: firebrick; }
+.heatMap tr:nth-child(17) { background: darkcyan; }
+
+.heatMap th:first-of-type { width: 50%; }
+.heatMap th:nth-of-type(2) { width: 20%; }
